# MetaHarmonizer_App

./: .env  .env.example  .env.public.example  .gitignore  .pre-commit-config.yaml  Caddyfile  MEETING_CURATION_TEAM.md  Makefile  PROJECT_PLAN.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: engine-boundary.yml
backend/: .dockerignore  Dockerfile  STRUCTURE.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8f124a68339b_initial_schema.py  a1b2c3d4e5f6_append_only_audit.py  b2c3d4e5f6a7_add_job_failures.py  c3d4e5f6a7b8_drop_viewer_add_admin_requested.py  d4e5f6a7b8c9_add_studies_exported.py  e5f6a7b8c9d0_add_federation_tables.py
backend/app/: database.py  main.py  models.py
backend/app/core/: __init__.py  deps.py  email.py  errors.py  hibp.py  jobs.py  limits.py  logging.py  metrics.py  middleware.py  pagination.py  queue.py  redis.py  security.py  sentry.py  settings.py  uploads.py
backend/app/db/: __init__.py  base.py  locking.py  (+3 more)
backend/scripts/: migrate_sqlite_to_pg.py  seed_account.py
backend/tests/: conftest.py
docs/: engine-adapter-architecture.md
docs/adr/: 0001-engine-adapter-pattern.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
mcp/: README.md  pyproject.toml
mcp/src/metaharmonizer_mcp/: __init__.py  engine.py  server.py
mcp/tests/: test_tools.py
scripts/: add_test_cards.ps1  add_trello_cards.ps1  check_engine_boundary.py  create_trello_board.ps1  dev_services.ps1  move_trello_cards.ps1
(+122 files in other folders)
